--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "nodemon": "^2.0.15"
   },
+  "scripts": {
+    "start": "nodemon src/app.js"
+  },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
